Update to latest upstream release

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "hsqldb_1_8_1_3.zip": 15b1ece2f131bdb007cae5762f631e8d5fd6eaae
+  hsqldb_1_8_1_3.zip: 15b1ece2f131bdb007cae5762f631e8d5fd6eaae
